<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddGoalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <include
                    layout="@layout/toolbar_main"
                    android:id="@+id/toolbar" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="textCapSentences"
                    android:textCursorDrawable="@null"
                    android:focusable="true"
                    android:textSize="26sp"
                    android:hint="@string/add_goal_name"
                    android:textColor="@color/onPrimary"
                    android:textColorHighlight="#44ffffff"
                    android:textColorHint="#66ffffff"
                    android:backgroundTint="@android:color/transparent"
                    android:theme="@style/onPrimaryEditText"
                    >
                    <requestFocus />
                </EditText>

            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_description_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/description_hint"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <TextView
                        android:id="@+id/desc_text"
                        android:textSize="12sp"
                        android:text="@string/none"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/importance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_adjust_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/importance"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <TextView
                        android:id="@+id/importance_text"
                        android:textSize="12sp"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_grade_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/difficulty"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <TextView
                        android:id="@+id/difficulty_text"
                        android:textSize="12sp"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/is_recursive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_repeat_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/add_recursive_goal"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <TextView
                        android:id="@+id/is_recursive_text"
                        android:textSize="12sp"
                        android:text="@string/no"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/ic_label_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/labels"
                        android:textColor="#b0000000"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                   <!-- <LinearLayout
                        android:id="@+id/labels_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>-->

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/labels_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimaryLight"
        app:borderWidth="0dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@color/colorPrimary"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_done_white_36dp"
        android:onClick="onClickDone"
        />

</android.support.design.widget.CoordinatorLayout>