<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.design.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.TodayActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rl"
            android:clipChildren="false">

            <LinearLayout
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.AppBarOverlay">

                    <include
                        layout="@layout/toolbar_main"
                        android:id="@+id/toolbar" />

                    <ProgressBar
                        android:id="@+id/goals_progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:progress="1"
                        android:progressTint="@android:color/white"/>
                    <LinearLayout
                        android:id="@+id/progress_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_done"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:gravity="start"
                            android:textColor="@android:color/white"/>

                        <TextView
                            android:id="@+id/text_day"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:textColor="@android:color/white"/>

                        <TextView
                            android:id="@+id/text_left"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:gravity="end"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>

                </android.support.design.widget.AppBarLayout>

                <include layout="@layout/content_today"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fab_layout"
                android:onClick="onClickFabLayout"
                android:clickable="true"
                android:visibility="invisible"
                >
            </RelativeLayout>

            <net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/fab_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_white_24"
                fab:fab_addButtonColorNormal="@color/colorPrimary"
                fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
                fab:fab_labelStyle="@style/menu_labels_style"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true">


                <!--<net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_random_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_title="@string/generate"
                    android:onClick="onClickDefault"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark" />-->

                <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_today_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_title="@string/quick"
                    android:onClick="onClickQuick"
                    fab:fab_icon="@drawable/baseline_today_white_18"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark" />

                <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_new_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_title="@string/add_new_goal"
                    fab:fab_icon="@drawable/baseline_add_white_18"
                    android:onClick="onClickNew"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"/>

                <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_recursive_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_title="@string/add_recursive_goal"
                    fab:fab_icon="@drawable/baseline_library_add_white_18"
                    android:onClick="onClickRecursive"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"/>

            </net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_nav" />
</android.support.v4.widget.DrawerLayout>